[metadata]
name = pyfy6900-tspspi
version = 0.0.1
author = Thomas Spielauer
author_email = pypipackages01@tspi.at
description = (Unofficial) control library for the FY6900 function generator
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/tspspi/pyfy6900
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
	pylabdevs-tspspi >= 0.0.5
	pyserial >= 3.5

[options.packages.find]
where = src
